[gd_scene load_steps=5 format=3 uid="uid://b8sj6qkd3bm8x"]

[ext_resource type="Script" path="res://minigames/click_icons/click_icons.gd" id="1_10met"]
[ext_resource type="Script" path="res://minigames/shooty/player.gd" id="3_sdnh7"]
[ext_resource type="Texture2D" uid="uid://n1nef6wxevhf" path="res://assets/icon.svg" id="3_w78ys"]
[ext_resource type="Texture2D" uid="uid://bpafligvmw2eg" path="res://minigames/shooty/bullet.png" id="5_t5nda"]

[node name="Shooty" type="Node2D"]
script = ExtResource("1_10met")

[node name="PlayArea" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 160.0
offset_top = 160.0
offset_right = 1760.0
offset_bottom = 920.0

[node name="Timer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[node name="Players" type="Node" parent="."]

[node name="Player1" type="Node2D" parent="Players" groups=["\"player\""]]
process_mode = 4
position = Vector2(200, 200)
script = ExtResource("3_sdnh7")

[node name="Sprite2D" type="Sprite2D" parent="Players/Player1"]
modulate = Color(1, 0.566667, 0, 1)
z_index = 1
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_w78ys")

[node name="Player2" type="Node2D" parent="Players" groups=["\"player\""]]
process_mode = 4
position = Vector2(1720, 200)
script = ExtResource("3_sdnh7")

[node name="Sprite2D" type="Sprite2D" parent="Players/Player2"]
z_index = 1
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_w78ys")

[node name="Player3" type="Node2D" parent="Players" groups=["\"player\""]]
process_mode = 4
position = Vector2(200, 880)
script = ExtResource("3_sdnh7")

[node name="Sprite2D" type="Sprite2D" parent="Players/Player3"]
modulate = Color(1, 0, 0.983333, 1)
z_index = 1
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_w78ys")

[node name="Player4" type="Node2D" parent="Players" groups=["\"player\""]]
process_mode = 4
position = Vector2(1720, 880)
script = ExtResource("3_sdnh7")

[node name="Sprite2D" type="Sprite2D" parent="Players/Player4"]
modulate = Color(0, 1, 0.0666666, 1)
z_index = 1
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_w78ys")

[node name="Bullet" type="Sprite2D" parent="."]
visible = false
position = Vector2(636, 432)
scale = Vector2(3, 3)
texture = ExtResource("5_t5nda")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
